* Bug fix: Color Filters widget echoing extra space in anchor tag - Reported by dkcreatto * Bug fix: Color picker is not showing in color edit page * Bug fix: Permalinks are not flushed on plugin activation * Bug fix: Widget bottom is broken

--- a/assets/css/color-filters.css
+++ b/assets/css/color-filters.css
@@ -13,8 +13,7 @@
 
 .color-filters-wrap {
 	width: 100%;
-	margin: 0 0 20px 0 !important;
-	float: left;
+	display: inline-block;
 }
 
 .color-item {
